--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "mongoose": "^5.5.14"
+    "mongoose": "^5.5.14",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
