--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.2",
     "mongoose": "^5.5.14",
     "sha1": "^1.1.1"
   },
